--- a/app/views/feeds/index.html.erb
+++ b/app/views/feeds/index.html.erb
@@ -1,9 +1,5 @@
       <%#Simple RSS does returns an array with 'title' and 'link' in some particular cases, hence URI.extract is used with .last to guarantee that only the link will be used with link_to %>
 
-<% # encoding: UTF-8 %>
-
-
-
   <% today_date = DateTime.now.utc %>
   <% today_date = today_date.strftime('%A, %B %e, %Y') %>
   <% yesterday_date = 1.day.ago.midnight.utc %>
@@ -15,40 +11,44 @@
   <% if @feeds.blank? %>
     <p> There are no feeds yet. We will update soon. </p>
   <% else %>
-    <br>
+
 
     <% sort_feeds_array(@feeds).each do |value| %>
       <% if value.present? %>
-        <% if value[1].length > 80 %>
+        <% if value[1].length > 75 %>
           <% value[1] = value[1].truncate(75, separator:' ') %>
         <% end %>
 
-        <% if  value[3] >= Chronic.parse('yesterday midnight').utc  %>
+        <% if  value[3].utc >= Chronic.parse('yesterday midnight').utc  %>
           <% if value[0].include?"Quidnunc RE" %>
-            <span class="feeds-quidnunc"><%= value[0] %></span>
-
-            <span class="feeds-links"><%= link_to " #{value[1]}", value[2] , :target => "blank" %> </span>
+            <div class="feeds-container">
+              <span class="feeds-quidnunc"><%= value[0] %></span>
+              <span class="feeds-links"><%= link_to " #{value[1]}", value[2] , :target => "blank" %> </span>
+            </div>
           <% else %>
-            <span class="feeds-source"><%=" #{value[0]}" %></span>
-
-            <span class="feeds-links"><%= link_to " #{value[1]}", value[2] , :target => "blank" %> </span>
-             <br>
+            <div class="feeds-container">
+              <span class="feeds-source"><%=" #{value[0]}" %></span>
+              <span class="feeds-links"><%= link_to " #{value[1]}", value[2] , :target => "blank" %> </span>
+            </div>
           <% end %>
+          <br>
 
         <% elsif  value[3] >= Chronic.parse('two days ago midnight').utc && value[3] < Chronic.parse('yesterday midnight') &&yesterday_header_counter == 0 %>
             <div class="feed-header"> <%= "#{yesterday_date_to_display}"  %></div>
-
             <% yesterday_header_counter = 1 %>
+
           <% if value[0].include?"Quidnunc RE" %>
-            <span class="feeds-quidnunc"><%= value[0] %></span>
-
-            <span class="feeds-links"><%= link_to " #{value[1]}", value[2] , :target => "blank" %> </span>
+            <div class="feeds-container">
+              <span class="feeds-quidnunc"><%= value[0] %></span>
+              <span class="feeds-links"><%= link_to " #{value[1]}", value[2] , :target => "blank" %> </span>
+            </div>
           <% else %>
-            <span class="feeds-source"><%=" #{value[0]}" %></span>
-
-            <span class="feeds-links"><%= link_to " #{value[1]}", value[2] , :target => "blank" %> </span>
-             <br>
+            <div class="feeds-container">
+              <span class="feeds-source"><%=" #{value[0]}" %></span>
+              <span class="feeds-links"><%= link_to " #{value[1]}", value[2] , :target => "blank" %> </span>
+            </div>
           <% end %>
+          <br>
 
         <% else %>
           <% if value[3] > Chronic.parse('three days ago midnight').utc && value[3] < Chronic.parse('two days ago') && yesterday_header_counter == 1 %>
@@ -57,15 +57,17 @@
           <% end %>
 
           <% if value[0].include?"Quidnunc RE" %>
-            <span class="feeds-quidnunc"><%= value[0] %></span>
-
-            <span class="feeds-links"><%= link_to " #{value[1]}", value[2] , :target => "blank" %> </span>
+            <div class="feeds-container">
+              <span class="feeds-quidnunc"><%= value[0] %></span>
+              <span class="feeds-links"><%= link_to " #{value[1]}", value[2] , :target => "blank" %> </span>
+            </div>
           <% else %>
-            <span class="feeds-source"><%=" #{value[0]}" %></span>
-
-            <span class="feeds-links"><%= link_to " #{value[1]}", value[2] , :target => "blank" %> </span>
-             <br>
+            <div class="feeds-container">
+              <span class="feeds-source"><%=" #{value[0]}" %></span>
+              <span class="feeds-links"><%= link_to " #{value[1]}", value[2] , :target => "blank" %> </span>
+            </div>
           <% end %>
+          <br>
 
         <% end %>
 
@@ -73,5 +75,5 @@
     <% end %>
 
   <% end %>
-</div>
+
 
