--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -911,33 +911,32 @@ fieldset.toc
 /* FEEDS */
 
 .feed-header {
-border: none;
-border-radius: 0px 0px 3px 3px;
-background-color: #f56b23;
-color: #FFFFFF;
-font-size: 16px;
-margin: 0 5px 0px 0;
-padding: 8px 5px;
-text-align: center;
-text-decoration: none;
-width: 100%;
-}
-
-.feeds-container{
+  border: none;
+  border-radius: 0px 0px 3px 3px;
+  background-color: #f56b23;
+  color: #FFFFFF;
+  font-size: 16px;
+  margin: 0 5px 0px 0;
+  padding: 8px 5px;
+  text-align: center;
+  text-decoration: none;
   width: 100%;
+  }
 
-  margin-top:2px;
-margin-bottom:2px;
+  .feeds-container{
+    width: 100%;
+    margin-top:3px;
+    margin-bottom:3px;
 }
 
 .feeds-links {
-margin-right: 6px;
-padding-right: 5px;
-padding-left: 6px;
-padding-bottom: 1px;
-padding-top: 1px;
-font-size: 13px;
-float: left;
+  margin-right: 6px;
+  padding-right: 5px;
+  padding-left: 6px;
+  padding-bottom: 1px;
+  padding-top: 1px;
+  font-size: 13px;
+  float: left;
 
   &:hover {
     font-size: 15px;
@@ -952,46 +951,49 @@ float: left;
 }
 
 .feeds-quidnunc {
-border:1px solid #f56b23;
-margin-right: 6px;
-padding-right: 5px;
-padding-left: 6px;
-padding-bottom: 1px;
-padding-top: 1px;
-font-size: 12px;
-float: right;
+  width: 79px;
+  text-align: center;
+  border:1px solid #f56b23;
+  margin-right: 6px;
+  padding-right: 5px;
+  padding-left: 6px;
+  padding-bottom: 1px;
+  padding-top: 1px;
+  font-size: 12px;
+  float: right;
 
-  &:hover {
-    font-size: 12px;
-    background-color: white;
-    border:1px solid #f56b23;
-    background: rgb(252, 221, 183);
-
-  }
-        a:hover {
-      padding-bottom: 10px;
-      text-decoration: none;
+    &:hover {
+      font-size: 12px;
+      background-color: white;
+      border:1px solid #f56b23;
+      background: rgb(252, 221, 183);
     }
+          a:hover {
+        padding-bottom: 10px;
+        text-decoration: none;
+      }
 }
 
 .feeds-source {
-border:1px solid blue;
-margin-right: 6px;
-padding-right: 5px;
-padding-left: 6px;
- padding-bottom: 1px;
-padding-top: 1px;
-font-size: 12px;
-float: right;
-  &:hover {
-    font-size: 12px;
-    background: aliceblue;
-    border:1px solid blue;
-  }
-      a:hover {
-      padding-bottom: 10px;
-      text-decoration: none;
+  width: 79px;
+  text-align: center;
+  border:1px solid blue;
+  margin-right: 6px;
+  padding-right: 5px;
+  padding-left: 6px;
+  padding-bottom: 1px;
+  padding-top: 1px;
+  font-size: 12px;
+  float: right;
+    &:hover {
+      font-size: 12px;
+      background: aliceblue;
+      border:1px solid blue;
     }
+        a:hover {
+        padding-bottom: 10px;
+        text-decoration: none;
+      }
 
 }
 
