Added capability to display the amount of views per post to the Admin Post View.   - Added column to display the amount of views per post on index. Enabled sorting.   - Added line on the Post show to display the amount of views of current post.   - Enabled sorting for Publication Status column.

--- a/app/views/admin/posts/_post.html.erb
+++ b/app/views/admin/posts/_post.html.erb
@@ -16,4 +16,8 @@
       <div class="draft">draft</div>
     <% end %>
   </td>
-</tr>
+
+  <td>
+     <div class="impressions-count"><%= post.impressions_count %></div>
+   </td>
+ </tr>
